# affordance_templates

./: .gitignore  LICENSE  README.md  index.html  params.json
affordance_template_library/: CMakeLists.txt  package.xml
affordance_template_library/models/: torus.stl
affordance_template_library/templates/: test.atdf  wheel.atdf
affordance_templates/: CMakeLists.txt  package.xml
rviz_template_panel/: CMakeLists.txt  manifest.xml  package.xml  plugin_description.xml
rviz_template_panel/cmake/: FindZeroMQ.cmake
rviz_template_panel/src/: Affordance.cpp  Affordance.hpp  TemplatePanel.cpp  TemplatePanel.hpp
template_markers/: CMakeLists.txt  package.xml  plugin_description.xml  setup.py
template_markers/nodes/: r2_leg_wheel_test.py  r2_wheel_test.py  template_parse_test.py  v1_wheel_test.py
template_markers/resources/: TODO
template_markers/resources/models/: DoorHandleTemplate.dae  ball_valve.dae  dewalt_drill.dae  drill.dae  foot.stl  lumber.dae  polaris_rviz.dae  vrc_standpipe2.dae  vrc_standpipe_centered.dae
template_markers/resources/models/DoorHandles/: bar_handle.dae  lever_handle.dae
template_markers/resources/models/Hands/: LeftHand.stl  RightHand.stl
template_markers/resources/models/Hose/: Hose.dae  reel.dae  wye.dae
template_markers/resources/models/ScanPath/: Cone.dae
template_markers/resources/paths/Hose/: leftHandoff2.path  rightHandoff1.path  rightHandoff2.path  rightHandoff3.path
template_markers/resources/paths/Hose/old/: hose_traj_1.path  hose_traj_2.path  hose_traj_3.path  hose_traj_4.path  hose_traj_5.path  hose_traj_6.path  left45Grasp1.path  left45Grasp2.path  leftFrontGrasp1.path  leftFrontGrasp2.path  leftHandoff1.path  leftSideGrasp1.path  leftSideGrasp2.path  leftSideGrasp3.path  leftSideGrasp4.path  leftSideGrasp5.path
template_markers/resources/paths/Lever/: leftHandDoorHandleHelper.path  leftHandDoorOpen.path  rightHandDoorOpen.path
template_markers/resources/robots/: r2.yaml  r2_legs.yaml  v1.yaml
template_markers/scripts/: PathPublisher.py  PathSerializer.py
template_markers/src/: Hands.py  Lever.py  MarkerTemplate.py  StreamThread.py  TaskTemplate.py  template_utilities.py
template_markers/src/old/: BallValve.py  Drill.py  HandMarker.py  HandMarker_NoMoveit.py  LargeWheel.py  MarkerTemplate.py  SmallWheel.py
template_markers/src/template_markers/: affordance_template.py  atdf_parser.py  robot_config.py  template_utilities.py
template_server/: CMakeLists.txt  package.xml  setup.py
template_server/launch/: affordance_template_server_r2.launch  affordance_template_server_v1.launch
template_server/scripts/: server.py
template_server/src/: template_server.py
template_server_protobuf/: CMakeLists.txt  package.xml  setup.py
template_server_protobuf/cmake/: FindProtocolBuffers.cmake
template_server_protobuf/proto/: AffordanceTemplateServerCmd.proto
