<?xml version="1.0"?>
<package>
  <name>template_server</name>
  <version>0.0.1</version>
  <description>Package that holds the server for affordance templates.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kimberly.a.hambuchen@nasa.gov">Kimberly Hambuchen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>template_markers</build_depend>
  <build_depend>template_server_protobuf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>template_markers</run_depend>
  <run_depend>template_server_protobuf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nasa_robot_teleop</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>