<?xml version="1.0"?>
<package>
  <name>template_server_protobuf</name>
  <version>0.0.1</version>
  <description>This holds the protobuf messages needed for the affordance template server
                to communicate with rviz.</description>
  <maintainer email="kimberly.a.hambuchen@nasa.gov">Kim Hambuchen</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


  <!-- Not sure if these exports work-->
  <export>
<!--     <python path="${prefix}/proto_gen/python"/>
    <cpp cflags="-I${prefix}/proto_gen/cpp" lflags="-L${prefix}/lib"/>
 -->  </export>
</package>